--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,8 +7,9 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family:
+    -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+    'Helvetica Neue', sans-serif;
   background-color: #f5f5f5;
   color: #333;
   line-height: 1.6;
@@ -18,12 +19,12 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   padding: 2rem;
-  
+
   header {
     text-align: center;
     margin-bottom: 2rem;
   }
-  
+
   main {
     display: flex;
     flex-direction: column;
